mengubah file style.css

--- a/style.css
+++ b/style.css
@@ -256,13 +256,13 @@ main div.wmi {
     animation: wmiBawahAtas 2s ease;
 }
 
-@keyframes wmiKiriKanan {
+@keyframes wmiBawahAtas {
     0% {
-        transform: translateX(-100%);
+        transform: translateY(100vh);
     }
 
     100% {
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
 
