--- a/style.css
+++ b/style.css
@@ -1,100 +1,104 @@
 @import url('https://rsms.me/inter/inter.css');
-html { font-family: 'Inter', sans-serif; }
+html {
+  font-family: 'Inter', sans-serif;
+}
 @supports (font-variation-settings: normal) {
-  html { font-family: 'Inter', sans-serif; }
+  html {
+    font-family: 'Inter', sans-serif;
+  }
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter';
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter';
 }
 
 ::-webkit-scrollbar {
-    background-color: #ffffff;
-    width: 15px;
-    border-radius: 5px;
+  background-color: #ffffff;
+  width: 15px;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 7px rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
+  box-shadow: inset 0 0 7px rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
 }
 
 body {
-    background-color: #ffffff;
-    color: rgba(0, 0, 0, .8);
+  background-color: #ffffff;
+  color: rgba(0, 0, 0, .8);
 }
 
 a {
-    color: rgba(0, 0, 0, .8);
+  color: rgba(0, 0, 0, .8);
 }
 
 .scroll-down {
-    transform: translate3d(0, -200%, 0);
+  transform: translate3d(0, -200%, 0);
 }
 
 /* GO TO TOP */
 button.go2Top {
-    display: none;
-    position: fixed;
-    z-index: 990;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    border-radius: 50px;
-    opacity: 0;
-    box-shadow: 0 0 10px rgb(255, 255, 255, 0.5);
-    transition: all 300ms;
+  display: none;
+  position: fixed;
+  z-index: 990;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  border-radius: 50px;
+  opacity: 0;
+  box-shadow: 0 0 10px rgb(255, 255, 255, 0.5);
+  transition: all 300ms;
 }
 
 /* BUTTON */
 .btn-blue {
-    background-color: #007AFF;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 15px 10px;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: 550;
-    transition: all 200ms;
+  background-color: #007AFF;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 15px 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: 550;
+  transition: all 200ms;
 }
 
 .btn-blue:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 .btn-blue-blur {
-    background-color: rgb(0, 122, 255, 0.1);
-    color: #007AFF;
-    border: none;
-    border-radius: 8px;
-    padding: 15px 10px;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: 550;
-    transition: all 200ms;
+  background-color: rgb(0, 122, 255, 0.1);
+  color: #007AFF;
+  border: none;
+  border-radius: 8px;
+  padding: 15px 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: 550;
+  transition: all 200ms;
 }
 
 .btn-blue-blur:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 form button {
-    margin: 5px 0;
+  margin: 5px 0;
 }
 
 button[type=reset] {
-    display: none;
-    background: rgb(150, 150, 150);
+  display: none;
+  background: rgb(150, 150, 150);
 }
 
 /* END BUTTON */
@@ -103,166 +107,167 @@ button[type=reset] {
 /* BODY */
 
 @keyframes animBawahAtas {
-    0% {
-        transform: translateY(-200%);
-    }
+  0% {
+    transform: translateY(-200%);
+  }
 
-    20% {
-        transform: translateY(10%);
-    }
+  20% {
+    transform: translateY(10%);
+  }
 
-    45% {
-        transform: translateY(-10%);
-    }
+  45% {
+    transform: translateY(-10%);
+  }
 
-    100% {
-        transform: translateY(0);
-    }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 @keyframes introKananKiri {
-    0% {
-        transform: translate3d(200%, 0, 0);
-    }
+  0% {
+    transform: translate3d(200%, 0, 0);
+  }
 
-    50% {
-        transform: translate3d(-10%, 0, 0);
-    }
+  50% {
+    transform: translate3d(-10%, 0, 0);
+  }
 
-    100% {
-        transform: translate3d(0, 0, 0);
-    }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 /* HEADER */
 
 header {
-    position: fixed;
-    top: -0.6px;
-    left: 0;
-    right: 0;
-    height: 70px;
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(15px);
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    transition: all 300ms;
-    z-index: 999;
+  position: fixed;
+  top: -0.6px;
+  left: 0;
+  right: 0;
+  height: 70px;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(15px);
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  transition: all 300ms;
+  z-index: 999;
 }
 
 .header-icon {
-    position: absolute;
-    left: 50px;
-    text-align: center;
-    user-select: none;
+  position: absolute;
+  left: 50px;
+  text-align: center;
+  user-select: none;
 }
 
 .header-icon a {
-    font-family: 'Inter', Helvetica;
-    font-size: 12px;
-    font-weight: 700;
-    text-decoration: none;
+  font-family: 'Inter', Helvetica;
+  font-size: 12px;
+  font-weight: 700;
+  color: #007AFF;
+  text-decoration: none;
 }
 
 header h3.username {
-    position: absolute;
-    top: 10px;
-    right: 62px;
-    font-weight: normal;
-    font-size: 15px;
-    color: rgb(0, 0, 0, 0.85);
+  position: absolute;
+  top: 10px;
+  right: 62px;
+  font-weight: normal;
+  font-size: 15px;
+  color: rgb(0, 0, 0, 0.85);
 }
 
 header h4.eth {
-    position: absolute;
-    margin-top: 15px;
-    right: 62px;
-    font-weight: normal;
-    font-size: 10px;
+  position: absolute;
+  margin-top: 15px;
+  right: 62px;
+  font-weight: normal;
+  font-size: 10px;
 }
 
 header img.user-icon {
-    position: absolute;
-    right: 10px;
-    height: 43px;
-    border-radius: 100%;
+  position: absolute;
+  right: 10px;
+  height: 43px;
+  border-radius: 100%;
 }
 
 header img:hover {
-    cursor: pointer;
-    box-shadow: 1px 1px 2px 1px rgb(255, 255, 255, 0.3);
+  cursor: pointer;
+  box-shadow: 1px 1px 2px 1px rgb(255, 255, 255, 0.3);
 }
 
 header button.contact {
-    position: absolute;
-    font-size: 12px;
-    right: 20px;
-    background-color: rgb(0, 0, 0, 0.8);
-    transition: all 300ms;
-    animation: introKananKiri 3s ease-in-out;
+  position: absolute;
+  font-size: 12px;
+  right: 20px;
+  background-color: rgb(0, 0, 0, 0.8);
+  transition: all 300ms;
+  animation: introKananKiri 3s ease-in-out;
 }
 
 header button.contact:hover {
-    background-color: #007AFF;
+  background-color: #007AFF;
 }
 
 header .nav-hp {
-    position: absolute;
-    right: 47px;
-    z-index: 1;
-    font-size: 35px;
-    text-align: center;
-    font-weight: lighter;
-    color: rgb(0, 0, 0, 0.8);;
-    display: none;
-    animation: introKananKiri 2s ease;
-    transition: all 300ms;
+  position: absolute;
+  right: 47px;
+  z-index: 1;
+  font-size: 35px;
+  text-align: center;
+  font-weight: lighter;
+  color: rgb(0, 0, 0, 0.8);;
+  display: none;
+  animation: introKananKiri 2s ease;
+  transition: all 300ms;
 }
 
 header .nav-hp.nav-hp-active {
-    color:#007AFF;
-    transform: rotate(45deg);
+  color: #007AFF;
+  transform: rotate(45deg);
 }
 
 /* HEADER NAV */
 
 nav {
-    position: absolute;
-    right: 100px;
-    border-radius: 10px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    transition: all ease 1000ms;
-    animation: navKananKiri 2s ease;
-    display: none;
+  position: absolute;
+  right: 100px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  transition: all ease 1000ms;
+  animation: navKananKiri 2s ease;
+  display: none;
 }
 
 nav a {
-    font-size: 12px;
-    font-weight: 600;
-    padding: 15px;
-    text-align: center;
-    text-decoration: none;
-    transition: all 200ms;
-    color: #007AFF;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 200ms;
+  color: #007AFF;
 }
 
 nav a#soon {
-    cursor: wait;
-    user-select: none;
+  cursor: wait;
+  user-select: none;
 }
 
 nav a:hover {
-    opacity: .2;
-    cursor: pointer;
+  opacity: .2;
+  cursor: pointer;
 }
 
 nav a:active {
-    color: rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.8);
 }
 
 /* END HEADER */
@@ -270,103 +275,103 @@ nav a:active {
 /* MAIN */
 
 main {
-    position: relative;
-    margin: auto;
-    top: 0px;
-    height: 2000px;
-    padding-top: 150px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    scroll-behavior: smooth;
+  position: relative;
+  margin: auto;
+  top: 0px;
+  height: 2000px;
+  padding-top: 150px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  scroll-behavior: smooth;
 }
 
 /* WMI */
 
 main div.wmi {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 main div.wmi1 {
-    box-sizing: border-box;
-    width: 700px;
-    animation: animBawahAtas 6s ease;
+  box-sizing: border-box;
+  width: 700px;
+  animation: animBawahAtas 6s ease;
 }
 
 .wmi1 h1 {
-    color: #007AFF;
-    text-align: left;
-    display: inline-block;
-    font-weight: 900;
-    font-size: 126px;
-    letter-spacing: -3px;
-    animation: wmih1Goyang 1.7s ease-in-out infinite alternate;
+  color: #007AFF;
+  text-align: left;
+  display: inline-block;
+  font-weight: 900;
+  font-size: 126px;
+  letter-spacing: -3px;
+  animation: wmih1Goyang 1.7s ease-in-out infinite alternate;
 }
 
 @keyframes wmih1Goyang {
-    0% {
-        transform: translateY(0);
-    }
+  0% {
+    transform: translateY(0);
+  }
 
-    100% {
-        transform: translateY(10%);
-    }
+  100% {
+    transform: translateY(10%);
+  }
 }
 
 .wmi1 p {
-    color: rgba(0, 0, 0,.7);
-    font-size: 20px;
-    width: 90%;
-    line-height: 28.5px;
-    margin-top: 10px;
-    text-align: left;
-    animation: wmiP 5s ease;
+  color: rgba(0, 0, 0,.7);
+  font-size: 20px;
+  width: 90%;
+  line-height: 28.5px;
+  margin-top: 10px;
+  text-align: left;
+  animation: wmiP 5s ease;
 }
 
 @keyframes wmiP {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
 .wmi1 button {
-    margin-top: 40px;
-    font-size: 17px;
-    animation: wmiBtn 10s ease;
+  margin-top: 40px;
+  font-size: 17px;
+  animation: wmiBtn 10s ease;
 }
 
 @keyframes wmiBtn {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
 div.wmi2 {
-    display: flex;
-    width: 270px;
-    animation: animBawahAtas 3s ease;
+  display: flex;
+  width: 270px;
+  animation: animBawahAtas 3s ease;
 }
 
 .wmi2 img {
-    margin: auto;
-    border-radius: 2%;
-    box-shadow: 15px 0px 16px 0 rgba(0, 66, 136, .3);
-    border-bottom-left-radius: 100%;
-    border-bottom-right-radius: 100%;
-    border-top-right-radius: 100%;
-    border-top-left-radius: 10%;
-    transition: all 2s;
+  margin: auto;
+  border-radius: 2%;
+  box-shadow: 15px 0px 16px 0 rgba(0, 66, 136, .3);
+  border-bottom-left-radius: 100%;
+  border-bottom-right-radius: 100%;
+  border-top-right-radius: 100%;
+  border-top-left-radius: 10%;
+  transition: all 2s;
 }
 
 /* END WMI */
@@ -379,27 +384,27 @@ div.wmi2 {
 /* TABLET */
 
 @media screen and (max-width: 1115px) {
-    main div.wmi1 {
-        width: 455px;
-    }
+  main div.wmi1 {
+    width: 455px;
+  }
 
-    .wmi1 h1 {
-        font-size: 85px;
-    }
+  .wmi1 h1 {
+    font-size: 85px;
+  }
 
-    .wmi1 p {
-        font-size: 14px;
-        width: 93%;
-    }
+  .wmi1 p {
+    font-size: 14px;
+    width: 93%;
+  }
 
-    div.wmi2 {
-        width: 210px;
-    }
+  div.wmi2 {
+    width: 210px;
+  }
 
-    div.wmi2 img {
-        width: 200px;
-        height: 200px;
-    }
+  div.wmi2 img {
+    width: 200px;
+    height: 200px;
+  }
 }
 
 /* TABLET AREA */
@@ -410,70 +415,70 @@ div.wmi2 {
 
 @media screen and (max-width: 700px) {
 
-    /* HEADER */
+  /* HEADER */
 
-    header {
-        height: 70px;
-    }
+  header {
+    height: 10vh;
+  }
 
-    .header-icon {
-        left: 8%;
-        width: 45%;
-        text-align: left;
-    }
-    
-    .header-icon a {
-        font-size: 70%;
-    }
+  .header-icon {
+    left: 8%;
+    width: 45%;
+    text-align: left;
+  }
 
-    header .nav-hp {
-        right: 8%;
-        display: block;
-    }
+  .header-icon a {
+    font-size: 70%;
+  }
 
-    header button.contact {
-        display: none;
-    }
+  header .nav-hp {
+    right: 8%;
+    display: block;
+  }
 
-    header nav {
-        display: none;
-    }
+  header button.contact {
+    display: none;
+  }
 
-    /* END OF HEADER */
+  header nav {
+    display: none;
+  }
+
+  /* END OF HEADER */
 
 
-    /* MAIN */
+  /* MAIN */
 
-    main {
-        padding-top: 35%;
-        padding-left: 8%;
-        padding-right: 8%;
+  main {
+    padding-top: 35%;
+    padding-left: 8%;
+    padding-right: 8%;
 
-    }
+  }
 
-    main div.wmi {
-        flex-direction: column;
-    }
+  main div.wmi {
+    flex-direction: column;
+  }
 
-    main div.wmi1 {
-        width: 100%;
-    }
-    
-    .wmi1 h1 {
-        font-size: 62px;
-    }
-    
-    .wmi1 p {
-        line-height: 20px;
-        width: 100%;
-    }
+  main div.wmi1 {
+    width: 100%;
+  }
 
-    .wmi1 button {
-        display: none;
-    }
+  .wmi1 h1 {
+    font-size: 62px;
+  }
 
-    div.wmi2 {
-        display: none;
-    }
+  .wmi1 p {
+    font-size: 15px;
+    line-height: 25px;
+    width: 90%;
+  }
+
+  .wmi1 button {
+    display: none;
+  }
+
+  div.wmi2 {
+    display: none;
+  }
 }
-
