--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ button.go2Top {
 }
 
 .btn-blue-blur {
-  background-color: rgb(0, 122, 255, 0.1);
+  background-color: rgba(0, 122, 255, 0.1);
   color: #007AFF;
   border: none;
   border-radius: 8px;
@@ -278,7 +278,6 @@ main {
   position: relative;
   margin: auto;
   top: 0px;
-  height: 2000px;
   padding-top: 150px;
   overflow: hidden;
   display: flex;
@@ -377,6 +376,29 @@ div.wmi2 {
 /* END WMI */
 
 /* END MAIN */
+
+/* FOOTER */
+
+footer {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-top: 50vh;
+  height: 200px;
+  background-color: rgba(0, 122, 255, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer div {
+  color: rgba(255, 255, 255, 1);
+  font-weight: 500;
+  text-align: center;
+}
+
+/* END OF FOOTER */
 
 
 /* RESPONSIVE AREA */
