--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ main {
   position: relative;
   margin: auto;
   top: 0px;
-  padding-top: 25vh;
+  padding-top: 27vh;
   overflow: hidden;
   display: flex;
   flex-direction: row;
@@ -384,18 +384,41 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  margin-top: 50vh;
-  height: 200px;
+  margin-top: 60vw;
+  height: 25vw;
   background-color: rgba(0, 122, 255, 1);
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
 }
 
-footer div {
+footer .follow-up {
+  display: flex;
+}
+
+footer div.follow-up a {
+  font-size: 1.5vw;
+  background-color: rgba(0, 0, 0, .8);
   color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+  padding: 6px 12px;
+  margin: 0 6px;
+  border-radius: 6px;
+}
+
+footer div {
+  margin: 6px 0;
+}
+
+footer .follow-up a {
+  font-size: 2vw;
+}
+
+footer .copyright {
+  color: rgba(255, 255, 255, 1);
+  font-size: 1.5vw;
   font-weight: 500;
-  text-align: center;
 }
 
 /* END OF FOOTER */
@@ -444,7 +467,7 @@ footer div {
   }
 
   .header-icon {
-    left: 8%;
+    left: 8vw;
     width: 45%;
     text-align: left;
   }
@@ -454,7 +477,7 @@ footer div {
   }
 
   header .nav-hp {
-    right: 8%;
+    right: 8vw;
     display: block;
   }
 
@@ -472,9 +495,9 @@ footer div {
   /* MAIN */
 
   main {
-    padding-top: 25vh;
-    padding-left: 8%;
-    padding-right: 8%;
+    padding-top: 50vw;
+    padding-left: 8vw;
+    padding-right: 8vw;
 
   }
 
@@ -487,13 +510,13 @@ footer div {
   }
 
   .wmi1 h1 {
-    font-size: 62px;
+    font-size: 15vw;
   }
 
   .wmi1 p {
-    font-size: 15px;
-    line-height: 25px;
-    width: 90%;
+    font-size: 2.3vw;
+    line-height: 5vw;
+    width: 75vw;
   }
 
   .wmi1 button {
@@ -503,4 +526,20 @@ footer div {
   div.wmi2 {
     display: none;
   }
+
+  /* END OF MAIN */
+
+
+  /* FOOTER */
+
+  footer .follow-up a {
+    font-size: 2vw;
+  }
+
+  footer .copyright {
+    font-size: 2.25vw;
+  }
+  
+  /* END OF FOOTER */
+  
 }
