--- a/style.css
+++ b/style.css
@@ -1,18 +1,11 @@
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 html {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 @supports (font-variation-settings: normal) {
   html {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter Var", sans-serif;
   }
-}
-
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Inter';
 }
 
 ::-webkit-scrollbar {
@@ -23,7 +16,8 @@ html {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: rgba(0, 122, 255, 0.3);
+  min-height: 40px;
+  background-color: rgba(0, 122, 255, 0.5);
 }
 
 ::-webkit-scrollbar-track {
@@ -31,13 +25,32 @@ html {
   border-radius: 5px;
 }
 
+::selection {
+  background: #ffdc00;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Inter";
+  box-sizing: border-box;
+  border: 1px solid black;
+}
+
 body {
   background-color: #ffffff;
-  color: rgba(0, 0, 0, .8);
+  color: #444452;
+  -webkit-font-smoothing: antialiased;
 }
 
 a {
-  color: rgba(0, 0, 0, .8);
+  text-decoration: none;
+  color: #444452;
+  transition: .25s ease;
+}
+
+a:hover {
+  color: #007aff;
 }
 
 .scroll-down {
@@ -45,65 +58,43 @@ a {
 }
 
 /* GO TO TOP */
-button.go2Top {
+.go2Top {
   display: none;
   position: fixed;
   z-index: 990;
-  bottom: 20px;
-  right: 20px;
-  width: 60px;
-  border-radius: 50px;
+  bottom: 30px;
+  right: 30px;
   opacity: 0;
-  box-shadow: 0 0 10px rgb(255, 255, 255, 0.5);
-  transition: all 300ms;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  transition: all 0.25s;
+}
+
+.go2Top:hover {
+  transform: translateY(-25%);
 }
 
 /* BUTTON */
-.btn-blue {
-  background-color: #007AFF;
-  color: white;
-  border: none;
+
+.btn {
+  color: #007aff;
+  background-color: rgb(0, 0, 0, 0);
+  border: 1px solid #007aff;
   border-radius: 6px;
   padding: 12px 18px;
   box-sizing: border-box;
   cursor: pointer;
   font-size: 15px;
-  font-weight: 550;
-  transition: all 200ms;
+  font-weight: 350;
+  transition: all 0.25s;
 }
 
-.btn-blue:hover {
-  opacity: 0.7;
-}
-
-.btn-blue-blur {
+.btn:hover {
   background-color: rgba(0, 122, 255, 0.1);
-  color: #007AFF;
-  border: none;
-  border-radius: 6px;
-  padding: 12px 18px;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-size: 15px;
-  font-weight: 550;
-  transition: all 200ms;
-}
-
-.btn-blue-blur:hover {
-  opacity: 0.7;
-}
-
-form button {
-  margin: 5px 0;
-}
-
-button[type=reset] {
-  display: none;
-  background: rgb(150, 150, 150);
 }
 
 /* END BUTTON */
-
 
 /* BODY */
 
@@ -153,85 +144,47 @@ button[type=reset] {
 
 header {
   position: fixed;
-  top: -0.6px;
-  left: 0;
-  right: 0;
-  height: 70px;
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.8);
+  top: 0px;
+  width: 100%;
+  height: 100px;
+  padding: 0 50px;
   backdrop-filter: blur(15px);
   display: flex;
   align-items: center;
-  overflow: hidden;
+  justify-content: space-between;
   transition: all 300ms;
   z-index: 999;
 }
 
+header nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .header-icon {
-  position: absolute;
-  left: 50px;
   text-align: center;
-  user-select: none;
 }
 
 .header-icon a {
-  font-family: 'Inter', Helvetica;
-  font-size: 12px;
+  font-size: 24px;
   font-weight: 700;
-  color: #007AFF;
+  color: #007aff;
   text-decoration: none;
 }
 
-header h3.username {
-  position: absolute;
-  top: 10px;
-  right: 62px;
-  font-weight: normal;
-  font-size: 15px;
-  color: rgb(0, 0, 0, 0.85);
-}
-
-header h4.eth {
-  position: absolute;
-  margin-top: 15px;
-  right: 62px;
-  font-weight: normal;
-  font-size: 10px;
-}
-
-header img.user-icon {
-  position: absolute;
-  right: 10px;
-  height: 43px;
-  border-radius: 100%;
-}
-
-header img:hover {
-  cursor: pointer;
-  box-shadow: 1px 1px 2px 1px rgb(255, 255, 255, 0.3);
-}
-
-header button.contact {
-  position: absolute;
+header button.resume {
   font-size: 12px;
-  right: 20px;
-  background-color: rgb(0, 0, 0, 0.8);
-  transition: all 300ms;
+  transition: all 250ms;
   animation: introKananKiri 3s ease-in-out;
 }
 
-header button.contact:hover {
-  background-color: #007AFF;
-}
-
 header .nav-hp {
-  position: absolute;
-  right: 47px;
-  z-index: 1;
   font-size: 35px;
   text-align: center;
   font-weight: lighter;
-  color: rgb(0, 0, 0, 0.8);;
+  color: #444452;
   display: none;
   user-select: none;
   animation: introKananKiri 2s ease;
@@ -239,152 +192,17 @@ header .nav-hp {
 }
 
 header .nav-hp.nav-hp-active {
-  color: #007AFF;
+  color: #007aff;
   transform: rotate(45deg);
 }
 
-/* HEADER NAV */
-
-nav {
-  position: absolute;
-  right: 100px;
-  border-radius: 10px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  transition: all ease 1000ms;
-  animation: navKananKiri 2s ease;
-  display: none;
-}
-
-nav a {
-  font-size: 12px;
-  font-weight: 600;
-  padding: 15px;
-  text-align: center;
-  text-decoration: none;
-  transition: all 200ms;
-  color: #007AFF;
-}
-
-nav a#soon {
-  cursor: wait;
-  user-select: none;
-}
-
-nav a:hover {
-  opacity: .2;
-  cursor: pointer;
-}
-
-nav a:active {
-  color: rgba(0, 0, 0, 0.8);
-}
 
 /* END HEADER */
-
-/* MAIN */
-
-main {
-  position: relative;
-  margin: auto;
-  top: 0px;
-  padding-top: 24vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  scroll-behavior: smooth;
-}
-
-/* WMI */
-
-main div.wmi {
-  display: flex;
-  justify-content: center;
-}
-
-main div.wmi1 {
-  box-sizing: border-box;
-  width: 700px;
-  animation: animBawahAtas 6s ease;
-}
-
-.wmi1 h1 {
-  color: #007AFF;
-  text-align: left;
-  display: inline-block;
-  font-weight: 900;
-  font-size: 126px;
-  letter-spacing: -2px;
-  animation: wmih1Goyang 1.7s ease-in-out infinite alternate;
-}
-
-@keyframes wmih1Goyang {
-  0% {
-    transform: translateY(0);
-  }
-
-  100% {
-    transform: translateY(10%);
-  }
-}
-
-.wmi1 p {
-  color: rgba(0, 0, 0,.7);
-  font-size: 20px;
-  width: 90%;
-  line-height: 28.5px;
-  margin-top: 15px;
-  text-align: left;
-  animation: wmiP 5s ease;
-}
-
-@keyframes wmiP {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-.wmi1 button {
-  margin-top: 40px;
-  font-size: 17px;
-  animation: introFade 10s ease;
-}
-
-div.wmi2 {
-  display: flex;
-  width: 270px;
-  animation: animBawahAtas 3s ease;
-}
-
-.wmi2 img {
-  margin: auto;
-  border-radius: 2%;
-  box-shadow: 15px 0px 16px 0 rgba(0, 66, 136, .3);
-  border-bottom-left-radius: 100%;
-  border-bottom-right-radius: 100%;
-  border-top-right-radius: 100%;
-  border-top-left-radius: 10%;
-  transition: all 2s;
-}
-
-/* END WMI */
-
-/* END MAIN */
 
 /* FOOTER */
 
 footer#footer {
-  margin-top: 200px;
-  padding: 42px 0;
-  background-color: rgba(0, 122, 255, 1);
+  padding: 36px 0;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -397,130 +215,30 @@ footer div {
 
 footer div.follow-up a {
   font-size: 4vw;
-  color: rgba(255, 255, 255, 1);
   text-decoration: none;
   margin: 0 6px;
 }
 
-footer .copyright {
-  color: rgba(255, 255, 255, 1);
-  font-size: 1.5vw;
-  font-weight: 500;
+footer a.copyright {
+  text-decoration: none;
+}
+
+footer .copyright div{
+  font-size: 1.25vw;
+  font-weight: 300;
+  cursor: pointer;
 }
 
 /* END OF FOOTER */
 
-
 /* RESPONSIVE AREA */
-
-/* TABLET */
-
-@media screen and (max-width: 1115px) {
-  main div.wmi1 {
-    width: 465px;
-  }
-
-  .wmi1 h1 {
-    font-size: 85px;
-  }
-
-  .wmi1 p {
-    font-size: 14px;
-    width: 93%;
-  }
-
-  div.wmi2 {
-    width: 210px;
-  }
-
-  div.wmi2 img {
-    width: 200px;
-    height: 200px;
-  }
-}
 
 /* TABLET AREA */
 
+@media screen and (max-width: 1115px) {
+}
 
-
-/* PHONE */
+/* PHONE AREA */
 
 @media screen and (max-width: 700px) {
-
-  /* HEADER */
-
-  header {
-    height: 10vh;
-  }
-
-  .header-icon {
-    left: 8vw;
-    width: 45%;
-    text-align: left;
-  }
-
-  .header-icon a {
-    font-size: 70%;
-  }
-
-  header .nav-hp {
-    right: 8vw;
-    display: block;
-  }
-
-  header button.contact {
-    display: none;
-  }
-
-  header nav {
-    display: none;
-  }
-
-  /* END OF HEADER */
-
-
-  /* MAIN */
-
-  main {
-    padding-top: 50vw;
-    padding-left: 8vw;
-    padding-right: 8vw;
-
-  }
-
-  main div.wmi {
-    flex-direction: column;
-  }
-
-  main div.wmi1 {
-    width: 100%;
-  }
-
-  .wmi1 h1 {
-    font-size: 15vw;
-  }
-
-  .wmi1 p {
-    font-size: 2.3vw;
-    line-height: 5vw;
-    width: 75vw;
-  }
-
-  .wmi1 button {
-    display: none;
-  }
-
-  div.wmi2 {
-    display: none;
-  }
-
-  /* END OF MAIN */
-
-  /* FOOTER */
-
-  footer .copyright {
-    font-size: 2.25vw;
-  }
-
-  /* END OF FOOTER */
 }
