--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ html {
   padding: 0;
   font-family: "Inter";
   box-sizing: border-box;
-  border: 1px solid black;
 }
 
 body {
@@ -46,7 +45,7 @@ body {
 a {
   text-decoration: none;
   color: #444452;
-  transition: .25s ease;
+  transition: 0.25s ease;
 }
 
 a:hover {
@@ -153,7 +152,7 @@ header {
   align-items: center;
   justify-content: space-between;
   transition: all 300ms;
-  z-index: 999;
+  z-index: 11;
 }
 
 header nav {
@@ -174,8 +173,25 @@ header nav {
   text-decoration: none;
 }
 
+header div.nav {
+  display: flex;
+}
+
+header div.nav ol {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  font-size: 13px;
+}
+
+header div.nav ol li a {
+  margin: 0 10px;
+  font-size: 1em;
+}
+
 header button.resume {
   font-size: 12px;
+  margin-left: 15px;
   transition: all 250ms;
   animation: introKananKiri 3s ease-in-out;
 }
@@ -196,12 +212,12 @@ header .nav-hp.nav-hp-active {
   transform: rotate(45deg);
 }
 
-
 /* END HEADER */
 
 /* FOOTER */
 
 footer#footer {
+  margin-top: 100vh;
   padding: 36px 0;
   display: flex;
   align-items: center;
@@ -223,7 +239,7 @@ footer a.copyright {
   text-decoration: none;
 }
 
-footer .copyright div{
+footer .copyright div {
   font-size: 1.25vw;
   font-weight: 300;
   cursor: pointer;
@@ -241,4 +257,15 @@ footer .copyright div{
 /* PHONE AREA */
 
 @media screen and (max-width: 700px) {
+  header div.nav button.resume {
+    display: none;
+  }
+
+  header div.nav ol {
+    display: none;
+  }
+
+  header .nav-hp {
+    display: block;
+  }
 }
