--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 @import url("https://rsms.me/inter/inter.css");
-html {
-  font-family: "Inter", sans-serif;
-}
+@import url("/fonts/sf-mono/style.css");
 @supports (font-variation-settings: normal) {
   html {
     font-family: "Inter Var", sans-serif;
   }
 }
+
 
 ::-webkit-scrollbar {
   background-color: #ffffff;
@@ -39,17 +38,43 @@ html {
 
 body {
   background-color: #fbfbfd;
-  color: #060D0D;
+  color: #3f3f3f;
 }
 
 a {
   text-decoration: none;
-  color: #060D0D;
+  color: #3f3f3f;
   transition: 0.25s ease;
 }
 
 a:hover {
   color: #004bcc;
+}
+
+a.text {
+  color: #004bcc;
+  overflow: hidden;
+  transition: 0.25s ease;
+  position: relative;
+  display: inline-block;
+}
+
+a.text::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.07em;
+  background-color: #004bcc;
+  opacity: 0;
+  transform: translate3d(-100%, 0, 0);
+  transition: opacity 250ms, transform 250ms;
+}
+
+a.text:hover::after, a.text.focus::after {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
 }
 
 .scroll-down {
@@ -94,6 +119,22 @@ a:hover {
 }
 
 /* END BUTTON */
+
+/* EMOJI */
+
+.emoji {
+  display: inline-block;
+  vertical-align: text-top;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.pointer {
+  background-image: url(img/emojis/pointright.png);
+}
+
+/* END OF EMOJI */
 
 /* BODY */
 
@@ -217,12 +258,58 @@ header .nav-hp.nav-hp-active {
 
 /* MAIN */
 
-main {
+div#content main {
   width: 100%;
-  padding: 0 150px;
+  padding: 0 180px;
   max-width: 1600px;
   min-height: 100vh;
 }
+
+/* SECTION HERO */
+
+main section.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 25px;
+  min-height: 100vh;
+  max-width: 1000px;
+}
+
+section.hero h3 {
+  margin: 0 0 0 4px;
+  color: #004bcc;
+  font-family: "SF Mono Regular";
+  font-size: 18px;
+  font-weight: 400;
+}
+
+section.hero h1 {
+  color: #060D0D;
+  font-size: 70px;
+  max-width: 499px;
+}
+
+section.hero p {
+  margin: 0 0 0 3px;
+  font-size: 18px;
+  max-width: 570px;
+}
+
+section.hero h2 {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+h2 span.emoji.pointer {
+  margin: 0 10px;
+  height: 30px;
+  width: 30px;
+  vertical-align: text-bottom;
+}
+
+/* END OF SECTION HERO */
 
 /* END OF MAIN */
 
@@ -260,16 +347,14 @@ footer a.copyright {
 
 /* TABLET AREA */
 
-@media screen and (max-width: 1115px) {
+@media screen and (max-width: 1080px) {
+  div#content main {
+    padding: 0 100px;
+  }
 }
 
-/* PHONE AREA */
 
-@media screen and (max-width: 480px) {
-  .header-icon a {
-    font-size: 4vmax;
-  }
-  
+@media screen and (max-width: 768px) {
   header div.nav button.resume {
     display: none;
   }
@@ -280,6 +365,22 @@ footer a.copyright {
 
   header .nav-hp {
     display: block;
+  }
+  
+  div#content main {
+    padding: 0 50px;
+  }
+}
+
+/* PHONE AREA */
+
+@media screen and (max-width: 480px) {
+  .header-icon a {
+    font-size: 4vmax;
+  }
+
+  div#content main {
+    padding: 0 25px;
   }
 
   footer div.follow-up i {
