--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url("/fonts/Inter/inter.css");
 @import url("/fonts/sf-mono/style.css");
 
-
 ::-webkit-scrollbar {
   background-color: #ffffff;
   width: 6px;
@@ -55,7 +54,7 @@ a.text {
 }
 
 a.text::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -66,13 +65,43 @@ a.text::after {
   transition: transform 250ms;
 }
 
-a.text:hover::after, a.text.focus::after {
+a.text:hover::after,
+a.text.focus::after {
   transform: translate3d(0, 0, 0);
 }
 
 .scroll-down {
   transform: translate3d(0, -200%, 0);
 }
+
+/* BLUR */
+
+.blur {
+  overflow: hidden;
+}
+
+/* END OF BLUR */
+
+/* MODAL */
+
+div.modal {
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  z-index: 11;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.01);
+  backdrop-filter: blur(0);
+  transition: all 800ms ease;
+}
+
+div.modal.active {
+  visibility: visible;
+  backdrop-filter: blur(10px);
+}
+
+/* END OF MODAL */
 
 /* GO TO TOP */
 .go2Top {
@@ -218,12 +247,18 @@ header {
   z-index: 11;
 }
 
+body.blur header {
+  background-color: transparent;
+  backdrop-filter: blur(0px);
+}
+
 header nav {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
   width: 100%;
+  z-index: 12;
 }
 
 .header-icon {
@@ -237,12 +272,13 @@ header nav {
   text-decoration: none;
 }
 
-header nav div.nav {
+nav div.nav {
   display: flex;
+  position: relative;
   gap: 25px;
 }
 
-header div.nav ol {
+div.nav ol {
   display: flex;
   align-items: center;
   list-style-type: none;
@@ -250,30 +286,32 @@ header div.nav ol {
   gap: 25px;
 }
 
-header div.nav ol li a {
+div.nav ol li a {
   font-family: "SF Mono regular";
   font-size: 1em;
 }
 
-header div.nav a.resume {
+div.nav a.resume {
   font-family: "SF Mono regular";
   font-size: 13px;
   transition: all 250ms;
   animation: introKananKiri 3s ease-in-out;
 }
 
-header .nav-hp {
+div.nav .nav-hp {
   font-size: 4vmax;
+  display: none;
   text-align: center;
   font-weight: lighter;
-  color: #060D0D;
-  display: none;
+  color: #060d0d;
+  position: relative;
+  z-index: 10;
   user-select: none;
   animation: introKananKiri 2s ease;
   transition: all 300ms;
 }
 
-header .nav-hp.nav-hp-active {
+div.nav .nav-hp.nav-hp-active {
   color: #004bcc;
   transform: rotate(45deg);
 }
@@ -303,7 +341,6 @@ main section.hero {
 
 section.hero h3 {
   margin: 0 0 25px 4px;
-  color: #004bcc;
   font-size: 32px;
   font-weight: 300;
 }
@@ -320,7 +357,7 @@ h3 span.emoji.wave:hover {
 }
 
 section.hero h1 {
-  color: #060D0D;
+  color: #060d0d;
   font-size: 70px;
   max-width: 700px;
 }
@@ -367,7 +404,7 @@ footer div {
   margin: 6px 0;
 }
 
-footer div.follow-up i {  
+footer div.follow-up i {
   font-size: 2vmax;
   text-decoration: none;
   margin: 0 3px;
@@ -387,13 +424,49 @@ footer a.copyright {
 /* TABLET AREA */
 
 @media screen and (max-width: 1080px) {
+  /* HEADER */
+
+  header {
+    padding: 0 40px;
+  }
+  
+  /* END OF HEADER */
+
   div#content main {
     padding: 0 100px;
   }
 }
 
-
 @media screen and (max-width: 768px) {
+  /* HEADER */
+
+  header {
+    padding: 0 25px;
+  }
+  
+  /* END OF HEADER */
+  
+  /* NAVMENU */
+
+  div.nav-menu {
+    position: fixed;
+    z-index: 11;
+    right: -200%;
+    height: 100%;
+    min-width: 85px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    box-shadow: -20px 0 75px rgba(0, 0, 0, 0.25);
+    background-color: #fbfbfd;
+    transition: 250ms ease-in-out;
+  }
+
+  div.nav-menu.active {
+    right: 0;
+  }
+
+  /* END OF NAVMENU */
+
   header div.nav a.resume {
     display: none;
   }
@@ -402,12 +475,20 @@ footer a.copyright {
     display: none;
   }
 
-  header .nav-hp {
+  div.nav .nav-hp {
     display: block;
   }
-  
+
   div#content main {
     padding: 0 50px;
+  }
+
+  footer div.follow-up i {
+    font-size: 4vmax;
+  }
+
+  footer a.copyright {
+    font-size: 1.7vmax;
   }
 }
 
@@ -420,13 +501,5 @@ footer a.copyright {
 
   div#content main {
     padding: 0 25px;
-  }
-
-  footer div.follow-up i {
-    font-size: 4vmax;
-  }
-
-  footer a.copyright {
-    font-size: 1.7vmax;
   }
 }
