--- a/style.css
+++ b/style.css
@@ -438,26 +438,66 @@ section.about h2.section-heading {
   margin: 0 0 36px 0;
 }
 
-section.about div {
+section.about div.about-div {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   gap: 50px;
 }
 
-section.about img {
-  filter: blur(10px);
-  border-radius: 7px;
+section.about div.about-div div.about-headshot-wrapper {
+  width: 300px;
+  height: 300px;
+  background-color: #004bcc;
+  border-radius: 4px;
+  position: relative;
+  transition: all 0.25scubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
-section.about div div {
+section.about div.about-div div.about-headshot-wrapper::before, div.about-headshot-wrapper::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  transition: all 0.25scubic-bezier(0.65, 0.05, 0.36, 1);
+}
+
+section.about div.about-div div.about-headshot-wrapper::before {
+  top: 0px;
+  left: 0px;
+  background-color: #004bcc;
+  mix-blend-mode: screen;
+}
+
+section.about div.about-div div.about-headshot-wrapper::after {
+  border: 2px solid #004bcc;
+  top: 15px;
+  left: 15px;
+  z-index: -1;
+}
+
+section.about div.about-div div.about-headshot-wrapper img {
+  border-radius: 4px;
+  mix-blend-mode: multiply;
+  filter: grayscale(100%) contrast(1);
+  transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1)
+}
+
+section.about div.about-div div.about-headshot-wrapper img:hover{
+  mix-blend-mode: normal;
+  filter: grayscale(0%);
+}
+
+section.about div.about-div div.about-text {
   display: flex;
   max-width: 399px;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-section.about div div p {
+section.about div.about-div div.about-text p {
   font-size: 18px;
   line-height: 1.5em;
 }
