--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ section.about div.about-div div.about-headshot-wrapper::after {
 section.about div.about-div div.about-headshot-wrapper img {
   border-radius: 4px;
   mix-blend-mode: multiply;
-  filter: grayscale(100%) contrast(1);
+  filter: grayscale(100%) contrast(1) brightness(1.5);
   transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1)
 }
 
