--- a/style.css
+++ b/style.css
@@ -446,6 +446,7 @@ section.about h2.section-heading::after {
   background-color: #060d0d;
   height: 1px;
   width: 300px;
+  margin-left: 15px;
 }
 
 section.about div.about-div {
@@ -455,11 +456,11 @@ section.about div.about-div {
 }
 
 section.about div.about-div div.about-headshot-wrapper {
+  background-color: #004bcc;
+  border-radius: 6px;
+  position: relative;
   width: 300px;
   height: 300px;
-  background-color: #004bcc;
-  border-radius: 4px;
-  position: relative;
   transition: all 0.25scubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
@@ -470,7 +471,7 @@ section.about div.about-div div.about-headshot-wrapper::before, div.about-headsh
   width: 100%;
   height: 100%;
   border-radius: 4px;
-  transition: all 0.25scubic-bezier(0.65, 0.05, 0.36, 1);
+  transition: all 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 section.about div.about-div div.about-headshot-wrapper::before {
@@ -488,7 +489,7 @@ section.about div.about-div div.about-headshot-wrapper::after {
 }
 
 section.about div.about-div div.about-headshot-wrapper img {
-  border-radius: 4px;
+  border-radius: 6px;
   mix-blend-mode: multiply;
   filter: grayscale(100%) contrast(1);
   transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1)
@@ -498,8 +499,6 @@ section.about div.about-div div.about-headshot-wrapper img:hover{
   mix-blend-mode: normal;
   filter: grayscale(0%);
 }
-
-
 
 section.about div.about-div div.about-text {
   display: flex;
@@ -608,6 +607,13 @@ footer a.copyright {
 
   section.about div.about-div div.about-headshot-wrapper {
     margin: 25px auto 0;
+    width: 250px;
+    height: 250px;  
+  }
+
+  section.about div.about-div div.about-headshot-wrapper img {
+    width: 250px;
+    height: 250px;
   }
   
   /* END OF SECTION ABOUT */
@@ -624,6 +630,14 @@ footer a.copyright {
 /* PHONE AREA */
 
 @media screen and (max-width: 480px) {
+  /* HEADER */
+  
+  div.nav .nav-hp {
+    font-size: 5vmax;
+  }
+  
+  /* END OF HEADER */
+
   .header-icon a {
     font-size: 4vmax;
   }
@@ -631,6 +645,18 @@ footer a.copyright {
   div#content main {
     padding: 0 25px;
   }
+
+  /* SECTION HERO */
+
+  section.about h2.section-heading {
+    font-size: 25px;
+  }
+
+  section.hero h1 {
+    font-size: 35px;
+  }
+
+  /* END OF SECTION HERO */
 
   /* SECTION ABOUT */
 
