--- a/style.css
+++ b/style.css
@@ -456,12 +456,12 @@ section.about div.about-div {
 }
 
 section.about div.about-div div.about-headshot-wrapper {
-  background-color: #004bcc;
-  border-radius: 6px;
+  background-color: #060d0d;
+  border-radius: 12px;
   position: relative;
   width: 300px;
   height: 300px;
-  transition: all 0.25scubic-bezier(0.65, 0.05, 0.36, 1);
+  transition: all 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 section.about div.about-div div.about-headshot-wrapper::before, div.about-headshot-wrapper::after {
@@ -470,8 +470,7 @@ section.about div.about-div div.about-headshot-wrapper::before, div.about-headsh
   position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
-  transition: all 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
+  border-radius: 12px;
 }
 
 section.about div.about-div div.about-headshot-wrapper::before {
@@ -482,20 +481,21 @@ section.about div.about-div div.about-headshot-wrapper::before {
 }
 
 section.about div.about-div div.about-headshot-wrapper::after {
-  border: 2px solid #004bcc;
+  border: 2px solid #060d0d;
   top: 20px;
   left: 20px;
   z-index: -1;
+  transition: all 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 section.about div.about-div div.about-headshot-wrapper img {
-  border-radius: 6px;
+  border-radius: 12px;
   mix-blend-mode: multiply;
   filter: grayscale(100%) contrast(1);
-  transition: all 250ms cubic-bezier(0.65, 0.05, 0.36, 1)
+  transition: all 0.25s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
-section.about div.about-div div.about-headshot-wrapper img:hover{
+section.about div.about-div div.about-headshot-wrapper img:hover {
   mix-blend-mode: normal;
   filter: grayscale(0%);
 }
