--- a/style.css
+++ b/style.css
@@ -75,6 +75,27 @@ a.text.focus::after {
   transform: translate3d(0, -200%, 0);
 }
 
+/* SUD */
+div.sud-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,.3);
+      backdrop-filter: blur(6px);
+      z-index: 999;
+}
+
+h2.sud {
+      font-family: "SF Mono regular";
+      font-size: 12px;
+      color: white;
+      margin: auto;
+}
+
 /* BLUR */
 
 .blur {
