--- a/style.css
+++ b/style.css
@@ -412,6 +412,8 @@ main section.hero {
 }
 
 section.hero h3 {
+  display: flex;
+  gap: 10px;
   margin: 0 0 25px 4px;
   font-size: 32px;
   font-weight: 300;
